--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -83,6 +83,10 @@
     <ClCompile Include="epoller.cpp" />
     <ClCompile Include="eventloop.cpp" />
     <ClCompile Include="eventqueue.cpp" />
+    <ClCompile Include="fileutil.cpp" />
+    <ClCompile Include="logfile.cpp" />
+    <ClCompile Include="logging.cpp" />
+    <ClCompile Include="logstream.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tcpconnection.cpp" />
     <ClCompile Include="tcpserver.cpp" />
@@ -96,6 +100,10 @@
     <ClInclude Include="epoller.h" />
     <ClInclude Include="eventloop.h" />
     <ClInclude Include="eventqueue.h" />
+    <ClInclude Include="fileutil.h" />
+    <ClInclude Include="logfile.h" />
+    <ClInclude Include="logging.h" />
+    <ClInclude Include="logstream.h" />
     <ClInclude Include="memorypool.h" />
     <ClInclude Include="tcpconnection.h" />
     <ClInclude Include="tcpserver.h" />
