--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -77,6 +77,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClCompile Include="asynclogging.cpp" />
     <ClCompile Include="buffer.cpp" />
     <ClCompile Include="channel.cpp" />
     <ClCompile Include="elthreadpool.cpp" />
@@ -94,6 +95,7 @@
     <ClCompile Include="timerqueue.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="asynclogging.h" />
     <ClInclude Include="buffer.h" />
     <ClInclude Include="channel.h" />
     <ClInclude Include="elthreadpool.h" />
