--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -85,6 +85,9 @@
     <ClCompile Include="eventloop.cpp" />
     <ClCompile Include="eventqueue.cpp" />
     <ClCompile Include="fileutil.cpp" />
+    <ClCompile Include="httprequest.cpp" />
+    <ClCompile Include="httpresponse.cpp" />
+    <ClCompile Include="httpserver.cpp" />
     <ClCompile Include="logfile.cpp" />
     <ClCompile Include="logging.cpp" />
     <ClCompile Include="logstream.cpp" />
@@ -103,6 +106,9 @@
     <ClInclude Include="eventloop.h" />
     <ClInclude Include="eventqueue.h" />
     <ClInclude Include="fileutil.h" />
+    <ClInclude Include="httprequest.h" />
+    <ClInclude Include="httpresponse.h" />
+    <ClInclude Include="httpserver.h" />
     <ClInclude Include="logfile.h" />
     <ClInclude Include="logging.h" />
     <ClInclude Include="logstream.h" />
