--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -77,51 +77,51 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
-    <ClCompile Include="asynclogging.cpp" />
-    <ClCompile Include="buffer.cpp" />
-    <ClCompile Include="channel.cpp" />
-    <ClCompile Include="elthreadpool.cpp" />
-    <ClCompile Include="kepoll.cpp" />
-    <ClCompile Include="eventloop.cpp" />
-    <ClCompile Include="eventqueue.cpp" />
-    <ClCompile Include="fileutil.cpp" />
-    <ClCompile Include="httprequest.cpp" />
-    <ClCompile Include="httpresponse.cpp" />
-    <ClCompile Include="httpserver.cpp" />
-    <ClCompile Include="ksocket.cpp" />
-    <ClCompile Include="logfile.cpp" />
-    <ClCompile Include="logging.cpp" />
-    <ClCompile Include="logstream.cpp" />
+    <ClCompile Include="base\asynclogging.cpp" />
+    <ClCompile Include="net\buffer.cpp" />
+    <ClCompile Include="net\channel.cpp" />
+    <ClCompile Include="net\elthreadpool.cpp" />
+    <ClCompile Include="net\kepoll.cpp" />
+    <ClCompile Include="net\eventloop.cpp" />
+    <ClCompile Include="net\eventqueue.cpp" />
+    <ClCompile Include="base\fileutil.cpp" />
+    <ClCompile Include="httpserver\httprequest.cpp" />
+    <ClCompile Include="httpserver\httpresponse.cpp" />
+    <ClCompile Include="httpserver\httpserver.cpp" />
+    <ClCompile Include="net\ksocket.cpp" />
+    <ClCompile Include="base\logfile.cpp" />
+    <ClCompile Include="base\logging.cpp" />
+    <ClCompile Include="base\logstream.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="poller.cpp" />
-    <ClCompile Include="tcpconnection.cpp" />
-    <ClCompile Include="tcpserver.cpp" />
-    <ClCompile Include="timer.cpp" />
-    <ClCompile Include="timerqueue.cpp" />
+    <ClCompile Include="net\poller.cpp" />
+    <ClCompile Include="net\tcpconnection.cpp" />
+    <ClCompile Include="net\tcpserver.cpp" />
+    <ClCompile Include="net\timer.cpp" />
+    <ClCompile Include="net\timerqueue.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="asynclogging.h" />
-    <ClInclude Include="buffer.h" />
-    <ClInclude Include="channel.h" />
-    <ClInclude Include="elthreadpool.h" />
-    <ClInclude Include="kepoll.h" />
-    <ClInclude Include="eventloop.h" />
-    <ClInclude Include="eventqueue.h" />
-    <ClInclude Include="fileutil.h" />
-    <ClInclude Include="httprequest.h" />
-    <ClInclude Include="httpresponse.h" />
-    <ClInclude Include="httpserver.h" />
-    <ClInclude Include="ksocket.h" />
-    <ClInclude Include="logfile.h" />
-    <ClInclude Include="logging.h" />
-    <ClInclude Include="logstream.h" />
-    <ClInclude Include="memorypool.h" />
-    <ClInclude Include="poller.h" />
-    <ClInclude Include="uncopyable.h" />
-    <ClInclude Include="tcpconnection.h" />
-    <ClInclude Include="tcpserver.h" />
-    <ClInclude Include="timer.h" />
-    <ClInclude Include="timerqueue.h" />
+    <ClInclude Include="base\asynclogging.h" />
+    <ClInclude Include="net\buffer.h" />
+    <ClInclude Include="net\channel.h" />
+    <ClInclude Include="net\elthreadpool.h" />
+    <ClInclude Include="net\kepoll.h" />
+    <ClInclude Include="net\eventloop.h" />
+    <ClInclude Include="net\eventqueue.h" />
+    <ClInclude Include="base\fileutil.h" />
+    <ClInclude Include="httpserver\httprequest.h" />
+    <ClInclude Include="httpserver\httpresponse.h" />
+    <ClInclude Include="httpserver\httpserver.h" />
+    <ClInclude Include="net\ksocket.h" />
+    <ClInclude Include="base\logfile.h" />
+    <ClInclude Include="base\logging.h" />
+    <ClInclude Include="base\logstream.h" />
+    <ClInclude Include="base\memorypool.h" />
+    <ClInclude Include="net\poller.h" />
+    <ClInclude Include="base\uncopyable.h" />
+    <ClInclude Include="net\tcpconnection.h" />
+    <ClInclude Include="net\tcpserver.h" />
+    <ClInclude Include="net\timer.h" />
+    <ClInclude Include="net\timerqueue.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
