--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="base\kthread.cpp" />
     <ClCompile Include="base\buffer.cpp" />
     <ClCompile Include="base\coroutine.cpp" />
+    <ClCompile Include="base\coloop.cpp" />
     <ClCompile Include="net\kpoll.cpp" />
     <ClCompile Include="net\channel.cpp" />
     <ClCompile Include="net\elthreadpool.cpp" />
@@ -110,6 +111,7 @@
     <ClInclude Include="base\kthread.h" />
     <ClInclude Include="base\blockqueue.h" />
     <ClInclude Include="base\coroutine.h" />
+    <ClInclude Include="base\coloop.h" />
     <ClInclude Include="net\kpoll.h" />
     <ClInclude Include="net\ktype.h" />
     <ClInclude Include="net\kmysql.h" />
