--- a/muduo_linux/muduo_linux.vcxproj
+++ b/muduo_linux/muduo_linux.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="net\tcpserver.h" />
     <ClInclude Include="net\ktimer.h" />
     <ClInclude Include="net\timerqueue.h" />
+    <ClInclude Include="coroutine\timewheel.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
